k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-frontend
  labels:
    app: core-frontend
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-frontend
  template:
    metadata:
      labels:
        app: core-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k8s-ng-role
                    operator: In
                    values:
                      - oss
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: core-frontend
                topologyKey: "kubernetes.io/hostname"
      nodeSelector: {}
      tolerations:
        - key: "apps"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: core-frontend
          image: asia-south1-docker.pkg.dev/kfcpl-dev/custom/frontend-dev:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: 500m
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: core-frontend
