k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credcheck-frontend-service
  labels:
    app: credcheck-frontend
    environment: dev
spec:
  trafficDistribution: PreferSameZone
  selector:
    app: credcheck-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
